<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_popular"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_from_gallery"
            android:layout_marginTop="@dimen/margin_item_separator"
            style="@android:style/Holo.SegmentedButton"/>

        <Button
            android:id="@+id/bt_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_from_camera"
            android:layout_marginTop="@dimen/margin_item_separator"
            style="@android:style/Holo.SegmentedButton"/>

        <ProgressBar
            android:id="@+id/pb_uploading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_item_separator"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_image_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_item_separator"
            android:visibility="gone"
            tools:text="@string/error_uploading_image"
            android:textColor="@color/red_error"
            tools:visibility="visible" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>